Update dependencies and enhance user verification flow
- Upgraded `cloudinary` from version 1.27.0 to 2.9.0 in both `package.json` and `package-lock.json`.
- Updated `multer-storage-cloudinary` from version 4.0.0 to 2.2.1.
- Updated `body-parser` to version 1.20.4 and adjusted its dependencies.
- Upgraded `mongoose` to version 8.21.0 and `mongodb` to version 6.20.0.
- Enhanced the user verification process by logging the result of the email sending operation.
- Extended JWT token expiration from 2 days to 60 days for improved user session management.

--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
 EMAIL =codebeta7.official@gmail.com
 PASSWORD =hpkscjcjrtaknkqy
 SECRET =AIISJADFJBAOBSDABSDO
-MONGODB =mongodb+srv://caredeepaksen:sHxMboTBGJ1wOCgy@mycurd.jzcj9kh.mongodb.net/ps_manager?retryWrites=true&w=majority&appName=mycurd
+MONGODB =mongodb+srv://caredeepaksen@:caredeepaksen@mycurd.jzcj9kh.mongodb.net/ps_manager?appName=mycurd
 CLOUDINARY_API_KEY=332655772365345
 CLOUDINARY_API_SECRET=GiZxD9vpTEqujTW6QZe8qSooBbE
 CLOUDINARY_CLOUD_NAME=didylivdz
 
-PORT = 3000
+PORT = 8000
 
-VITE_API_URL=https://ps-manager-application-backend.onrender.com
+VITE_API_URL=http://localhost:8000/
 
