Refactor email verification process and add HTML email template

--- a/.env
+++ b/.env
@@ -1,12 +1,14 @@
 EMAIL =codebeta7.official@gmail.com
 PASSWORD =hpkscjcjrtaknkqy
 SECRET =AIISJADFJBAOBSDABSDO
-MONGODB =mongodb+srv://caredeepaksen@:caredeepaksen@mycurd.jzcj9kh.mongodb.net/ps_manager?appName=mycurd
+# MONGODB =mongodb+srv://caredeepaksen@:caredeepaksen@mycurd.jzcj9kh.mongodb.net/ps_manager?appName=mycurd
+MONGODB =mongodb+srv://chouhansoftware_db_user:chouhansoftware@cluster0.ps7bnfx.mongodb.net/doc_saver?retryWrites=true&w=majority
+
 CLOUDINARY_API_KEY=332655772365345
 CLOUDINARY_API_SECRET=GiZxD9vpTEqujTW6QZe8qSooBbE
 CLOUDINARY_CLOUD_NAME=didylivdz
 
-PORT = 8000
+PORT = 3000
 
-VITE_API_URL=http://localhost:8000
+VITE_API_URL=http://localhost:3000
 
